kasalanan mo to sidebar

--- a/FinalsTable/sidebar.css
+++ b/FinalsTable/sidebar.css
@@ -25,11 +25,11 @@ html {
 main {
   display: flex;
   flex-wrap: nowrap;
-  height: 100vh;
+  height:auto;
   height: -webkit-fill-available;
-  max-height: 100vh;
-  overflow-x: auto;
-  overflow-y: hidden;
+
+  overflow: auto;
+ 
 }
 
 
@@ -37,7 +37,6 @@ main {
 .b-example-divider {
   flex-shrink: 0;
   width: 1.5rem;
-  height: 100vh;
   background-color: rgba(0, 0, 0, .1);
   border: solid rgba(0, 0, 0, .15);
   border-width: 1px 0;
