--- a/stylez.css
+++ b/stylez.css
@@ -1024,3 +1024,12 @@ display:inline-block;
   font-weight: bold;
   color: #000000;
 }
+
+
+.collapse {
+  transition: all 0.4s ease-in;
+  -webkit-transition: all 0.4s ease-out;
+  -moz-transition: all 0.4s ease-out;
+  -o-transition: all 0.4s ease-out;
+  -ms-transition: all 0.4s ease-out;
+}
