--- a/FinalsTable/sidebar7.css
+++ b/FinalsTable/sidebar7.css
@@ -32,7 +32,7 @@ body {
   background-position: center;
   background-size: cover;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: auto;
 
 
 }
@@ -42,6 +42,9 @@ body {
 }
 
 .sidebar {
+  box-shadow: -2px 2px 30px 9px rgba(0,0,0,0.5) inset;
+-webkit-box-shadow: -2px 2px 30px 9px rgba(0,0,0,0.5) inset;
+-moz-box-shadow: -2px 2px 30px 9px rgba(0,0,0,0.5) inset;
   grid-template-columns: auto 1fr;
   /* Sidebar takes up auto width, main content takes up remaining width */
   gap: 40px;
@@ -236,7 +239,7 @@ body {
 @media (max-width: 768px) {
   .sidebar {
 
-    width: 20%;
+    width: 15%;
     /* Make the sidebar take up full width */
     margin-right: 0;
     /* Remove the right margin */
@@ -250,9 +253,10 @@ body {
 
   .container-fluid {
 
-    margin-left: 20%;
+    overflow:auto;
+    margin-left: 17%;
     /* Remove the left margin */
-    width: 100%;
+    width: 80%;
     /* Make the main content take up full width */
   }
 
@@ -287,6 +291,9 @@ body {
 
 .bg-row {
   background-color: rgb(7, 44, 75);
+  box-shadow: -2px 2px 30px 9px rgba(0,0,0,0.5) inset;
+  -webkit-box-shadow: -2px 2px 30px 9px rgba(0,0,0,0.5) inset;
+  -moz-box-shadow: -2px 2px 30px 9px rgba(0,0,0,0.5) inset;
 }
 
 .tble-bg {
@@ -309,14 +316,19 @@ th {
 
  .btn-color {
   background-color: rgb(7, 44, 75) !important;
+  
   color:white;
  }
  .btn-color:hover {
 color:rgb(255, 255, 255);
 background-color: #172685 !important;
+box-shadow: -2px 2px 30px 9px rgba(0, 0, 0, 0.179) inset;
+-webkit-box-shadow: -2px 2px 30px 9px rgba(0, 0, 0, 0.25) inset;
+-moz-box-shadow: -2px 2px 30px 9px rgba(0, 0, 0, 0.159) inset;
  }
 
  .bdr {
-  border-radius: 6px 6px 6px 6px;
-  overflow: hidden;
+  border-radius: 6px 6px 6px 6px !important;
+  overflow: hidden !important;
+ 
 }
