--- a/stylez.css
+++ b/stylez.css
@@ -1075,6 +1075,13 @@ box-shadow: -2px 2px 30px 9px rgba(0, 56, 6, 0.164) inset;
   -webkit-box-shadow: -2px 2px 30px 9px rgba(0,0,0,0.5) inset;
   -moz-box-shadow: -2px 2px 30px 9px rgba(0,0,0,0.5) inset;
 }
+.bg-rowPay {
+  
+  background-color: rgb(233, 245, 255);
+  box-shadow: -2px 2px 30px 9px rgba(202, 244, 255, 0.5) inset;
+  -webkit-box-shadow: -2px 2px 30px 9px rgba(202, 244, 255, 0.5) inset;
+  -moz-box-shadow: -2px 2px 30px 9px rgba(202, 244, 255, 0.5) inset;
+}
 
 .table-striped>tbody>tr:nth-child(odd)>td:hover, 
 .table-striped>tbody>tr:nth-child(odd)>th:hover {
